--- a/com.fem.main/plugin.xml
+++ b/com.fem.main/plugin.xml
@@ -26,12 +26,22 @@
       <perspectiveExtension
             targetID="*">
          <view
-               closeable="true"
+               closeable="false"
                id="com.fem.ui.views.femView"
                ratio="0.3f"
                relationship="left"
                relative="org.eclipse.ui.editorss"
                visible="true">
+         </view>
+         <view
+               closeable="false"
+               id="com.fem.ui.views.taskView"
+               minimized="false"
+               moveable="true"
+               ratio="0.8f"
+               relationship="bottom"
+               relative="com.fem.ui.views.femView"
+               visible="false">
          </view>
       </perspectiveExtension>
    </extension>
