added cashe images/refactor

--- a/com.fem.main/plugin.xml
+++ b/com.fem.main/plugin.xml
@@ -6,7 +6,7 @@
          id="application"
          point="org.eclipse.core.runtime.applications">
       <application
-            icon="icons/alt_window_16.gif">
+            icon="icons/logo16.png">
          <run
                class="com.fem.main.Application">
          </run>
@@ -16,7 +16,7 @@
          point="org.eclipse.ui.perspectives">
       <perspective
             class="com.fem.main.Perspective"
-            icon="icons/alt_window_16.gif"
+            icon="icons/logo16.png"
             id="com.fem.main.perspective"
             name="Perspective">
       </perspective>
