--- a/com.fem.ui.editors/build.properties
+++ b/com.fem.ui.editors/build.properties
@@ -2,25 +2,4 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml,\
-               lib/occjava.jar,\
-               lib/j3dcore.jar,\
-               lib/j3dutils.jar,\
-               lib/vecmath.jar,\
-               lib/JCuda-All-0.4.0-beta1-bin-windows-x86_64/jcuda-0.4.0-beta1.jar,\
-               lib/Jama/Jama-1.0.2.jar,\
-               lib/JCuda-All-0.4.0-beta1-bin-windows-x86_64/jcublas-0.4.0-beta1.jar,\
-               lib/JCuda-All-0.4.0-beta1-bin-windows-x86_64/jcudpp-0.4.0-beta1.jar,\
-               lib/JCuda-All-0.4.0-beta1-bin-windows-x86_64/jcufft-0.4.0-beta1.jar,\
-               lib/JCuda-All-0.4.0-beta1-bin-windows-x86_64/jcurand-0.4.0-beta1.jar,\
-               lib/JCuda-All-0.4.0-beta1-bin-windows-x86_64/jcusparse-0.4.0-beta1.jar,\
-               lib/JFreeChart/gnujaxp.jar,\
-               lib/JFreeChart/iText-2.1.5.jar,\
-               lib/JFreeChart/jcommon-1.0.16.jar,\
-               lib/JFreeChart/jfreechart-1.0.13-experimental.jar,\
-               lib/JFreeChart/jfreechart-1.0.13-swt.jar,\
-               lib/JFreeChart/jfreechart-1.0.13.jar,\
-               lib/JFreeChart/junit.jar,\
-               lib/JFreeChart/servlet.jar,\
-               lib/JFreeChart/swtgraphics2d.jar,\
-               lib/KDTree/kd.jar
+               plugin.xml
